# pre-entrega-automation-testing-daniel-eleazar-flea

./: .gitignore  README.md  conftest.py  main.py  pyproject.toml  pytest.ini  reporte.html
api/: api_functions.py
reports/: report.html  reporte.html
tests/: test_complete_checkout_flow.py  test_saucedemo.py  test_saucedemo_base.py
tests/api/: test_api_methods.py
tests/ui/: test_complete_checkout_flow.py  test_saucedemo_base.py
utils/: helpers.py
