[project]
name = "pre-entrega-automation-testing-daniel-eleazar-flea"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest>=9.0.3",
    "pytest-check>=2.8.0",
    "pytest-html>=4.2.0",
    "selenium>=4.43.0",
    "webdriver-manager>=4.0.2",
]
